# neuro_car_catkin

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  _target_net.pt  neurocar_log.txt  package.xml  requirements.txt  run_gui  run_neurocar
launch/: create_world.launch
logs/: latest
src/: controller.py  unpickle_td.py  weights_rot.npy  weights_trans.npy
src/chatter/: CMakeLists.txt  package.xml
src/chatter/launch/: test.launch
src/chatter/src/: talker.py
src/neurocar/: CMakeLists.txt  package.xml  setup.py
src/neurocar/launch/: neurocar.launch
src/neurocar/scripts/: train.py
src/neurocar/src/: controller.py  controller_node.py  environment.py  network.py  train.py
src/neurocar/src/neurocar/: controller.py  environment.py  network.py
src/neurocar/urdf/models/blended_track/: model-1_2.sdf  model.sdf
src/neurocar/urdf/models/track/: model.sdf
src/neurocar/worlds/: create.world  empty_sky_AR.world  jump_AR.world  pioneer2dx.world  populated_marietta.world
src/neurocar_circler/: CMakeLists.txt  package.xml
src/neurocar_circler/launch/: neurocar.launch
src/neurocar_circler/src/: controller.py
src/test/: CMakeLists.txt  package.xml
src/test/launch/: test.launch
src/test/src/: sub.py  test.py
urdf/models/blended_track/: model.sdf
worlds/: create.world  empty_sky_AR.world
